--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <div class="section-padding">
         <div class="section-bg"></div>
-        <header>
+        <header class="hedear-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-2 col-12">
                         <div class="logo">
                             <h2>HOME</h2>
                         </div>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-10 co-12">
                         <div class="main-menu">
                             <ul>
                                 <li><a href="#">home</a></li>
@@ -36,6 +36,9 @@
                                 <li><a href="#"><i class="fas fa-search"></i></a></li>
                             </ul>
                         </div>
+                        <button class="nav-toggler">
+                            <span></span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -53,16 +56,10 @@
             </div>
         </section>
         <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 offset-8">
-                        <div class="icon">
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
+            <div class="icon">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </footer>
     </div>
@@ -70,8 +67,14 @@
 
 
 
+
+
+
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+
+    
+
 </body>
 
 </html>
